// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/SignInUpFormWrapper Signin 1`] = `
<div
  className="max-w-md md:px-0 max-h-[calc(100vh-32px)] overflow-y-auto"
>
  <div
    className="bg-white border border-gray-200 shadow p-4 sm:p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-bold font-headline m-0 mb-4 text-purple"
      >
        Login
      </h1>
      <form
        id="signin-form"
        noValidate={true}
      >
        <h1>
          I'm a signin form
        </h1>
      </form>
    </div>
    <div
      className="flex gap-4 place-content-between"
    >
      <section
        className="text-gray-500"
      >
        Hast du noch keinen Account? 
        <a
          className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset inline-block"
          href="/signup"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Registriere dich
        </a>
      </section>
      <section
        className="flex flex-col"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <input
          className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
          form="signin-form"
          type="submit"
          value="Einloggen"
          variant="primary"
        />
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/SignInUpFormWrapper Signup 1`] = `
<div
  className="max-w-md md:px-0 max-h-[calc(100vh-32px)] overflow-y-auto"
>
  <div
    className="bg-white border border-gray-200 shadow p-4 sm:p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-bold font-headline m-0 mb-4 text-purple"
      >
        Registrierung
      </h1>
      <form
        id="signup-form"
        noValidate={true}
      >
        <h1>
          I'm a signup form
        </h1>
      </form>
    </div>
    <div
      className="flex gap-4 place-content-between"
    >
      <section
        className="text-gray-500"
      >
        Hast du schon einen Account? 
        <a
          className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset inline-block"
          href="/signin"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Logge dich ein
        </a>
      </section>
      <section
        className="flex flex-col"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <input
          className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
          form="signup-form"
          type="submit"
          value="Registrieren"
          variant="primary"
        />
      </section>
    </div>
  </div>
</div>
`;
